# Stormwater-Management-Model

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md  appveyor.yml  circle.yml  setup.py
.github/: REGRESSION_TESTING.md
.github/workflows/: build-test-arm64.yaml  build-test.yml
Coupling_unit_testing/: CMakeLists.txt
Coupling_unit_testing/include/: coupling.h  funcs.h
Coupling_unit_testing/src/: coupling.c
Coupling_unit_testing/tests/: test_coupling.cpp
cmake/: FindBoostTestHeaders.cmake
docs/: modules_toolkit.dox
include/: coupling.h  toolkitAPI.h
src/: consts.h  controls.c  coupling.c  coupling.h  dynwave.c  error.c  error.h  funcs.h  hotstart.c  infil.c  infil.h  input.c  keywords.c  lid.c  mathexpr.c  mempool.c  objects.h  project.c  qualrout.c  runoff.c  stats.c  subcatch.c  swmm5.c  swmm5.h  text.h  toolkitAPI.c  toolkitAPI.h  toolkitAPImodified.c  treatmnt.c
src/include/: toolkitAPI.h
src/outfile/: swmm_output.c
src/run/: main.c
src/solver/: CMakeLists.txt  consts.h  coupling.c  dynwave.c  enums.h  error.c  error.h  flowrout.c  funcs.h  gage.c  globals.h  headers.h  hotstart.c  infil.c  inflow.c  input.c  landuse.c  lid.c  lid.h  lidproc.c  massbal.c  node.c  objects.h  output.c  project.c  qualrout.c  report.c  routing.c  stats.c  statsrpt.c  subcatch.c  surfqual.c  swmm5.c  text.h  toolkit.c  treatmnt.c  version.h.in
src/solver/include/: swmm5.h  toolkit.h  toolkit_enums.h  toolkit_structs.h
tests/: CMakeLists.txt  test_coupling.cpp  test_swmm.cpp  test_toolkitapi.cpp  test_toolkitapi.hpp  test_toolkitapi_coupling.cpp  test_toolkitapi_hotstart.cpp  test_toolkitapi_rdii.cpp  test_toolkitapi_rdii.hpp
tests/data/: swmm_api_test.inp  swmm_api_test_metric.inp  test8b_drainage_ponding.out  test8b_drainage_ponding.rpt
tests/data/hotstart/: benchmark_hotstart.hsf  swmm_api_test_19980101_014000.inp  swmm_api_test_use_hotstart.inp
tests/outfile/: CMakeLists.txt  test_output.cpp
tests/shared/: CMakeLists.txt  test_cstrhelper.cpp  test_errormanager.cpp  test_filemanager.cpp
tests/solver/: CMakeLists.txt  test_coupling.cpp  test_gage.cpp  test_inlets_and_drains.cpp  test_lid.cpp  test_lid_results.cpp  test_pollut.cpp  test_pollutants.cpp  test_pollutants.hpp  test_solver.cpp  test_toolkit.cpp  test_toolkit_coupling.cpp  test_toolkit_coupling.hpp  test_toolkit_hotstart.cpp
tests/solver/data/: test_inlet_drains.inp
tools/: after-success.sh  build-wheels.sh  build_wheels.ps1  clangformatter.py  run-nrtest.cmd  update-authors.sh
